@@ -666,7 +666,7 @@ int cmdlineoptions(int ac, char **av)
 {
     int   i, ierr;
     R_size_t value;
-    char *p;
+    char *p,*q;
     char  s[1024];
     structRstart rstart;
     Rstart Rp = &rstart;
@@ -850,13 +850,12 @@ int cmdlineoptions(int ac, char **av)
     } else if ((p = getenv("HOME"))) {
 	if(strlen(p) >= MAX_PATH) R_Suicide("Invalid HOME");
 	strcpy(RUser, p);
-    } else if ((p = getenv("HOMEDRIVE"))) {
+    } else if ((p = getenv("HOMEDRIVE")) && (q = getenv("HOMEPATH"))) {
 	if(strlen(p) >= MAX_PATH) R_Suicide("Invalid HOMEDRIVE");
 	strcpy(RUser, p);
-	p = getenv("HOMEPATH");
-	if(!p || strlen(RUser) + strlen(p) >= MAX_PATH) 
+	if(strlen(RUser) + strlen(q) >= MAX_PATH)
 	    R_Suicide("Invalid HOMEDRIVE+HOMEPATH");
-	strcat(RUser, p);
+	strcat(RUser, q);
     } else
 	GetCurrentDirectory(MAX_PATH, RUser);
     p = RUser + (strlen(RUser) - 1);
