@@ -15,6 +15,9 @@ Rcmd INSTALL (PR#6768).
 
 choose.files(multi=FALSE) was liable to give incorrect results (PR#6818).
 
+Workaround for bug in Microsoft critical update KB835732:  if HOMEPATH
+environment variable is not set properly, R would not start.
+
 
 
 rw1090
